<resources>
    <string name="app_name">Car</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Role">Role</string>
    <string name="Image">Image</string>
    <string name="Register">Register</string>
    <string name="HaveAnAccountAlready">Have An Account Aleady ? </string>
    <string name="SignIn">Sign In</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="Login">Login</string>
    <string name="DontHaveAnAccount">Dont Have An Account ? </string>
    <string name="SignUp">Sign Up</string>
    <string name="OR">OR</string>
    <string name="SignInWithGoogle">Sign In With Google</string>
    <string name="title_activity_test">test</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Profile">Profile</string>
    <string name="Cars">Cars</string>
    <string name="Shop">Shop</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password1">ForgotPassword1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_update_user">UpdateUserActivity</string>


</resources>